--- a/verificado/index.html
+++ b/verificado/index.html
@@ -15,7 +15,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://protozerobarriga.online/">CONTINUAR</a>
+          <a class="btn" href="https://protozerobarriga.solutions/">CONTINUAR</a>
         </div>
       </div>    
     </div>
